--- a/libs/remark-css/example_mod.css
+++ b/libs/remark-css/example_mod.css
@@ -65,6 +65,7 @@ blockquote {
   border-left: solid 5px lightgray;
   padding-left: 1em;
 }
+.massive { font-size: 85px }
 .huge { font-size: 160% }
 .large { font-size: 130% }
 .medium { font-size: 90% }
